:no_mobile_phones: Responsive design and spacing fixes

--- a/scss-c2s/c2s-results.scss
+++ b/scss-c2s/c2s-results.scss
@@ -43,9 +43,9 @@ body {
           }
       }
       .viewToggle {
-        margin: 16px 18px 50px;
+        margin: 0px 18px 70px 18px;
         @include media(tablet) {
-          margin: 16px 18px;
+          margin: 0px 18px 30px 18px;
         }
         a {
           text-decoration: none;
@@ -65,7 +65,7 @@ body {
             white-space: pre;
             top: 65px;
             line-height: 40px;
-            @include media(371px) {
+            @include media(355px) {
               top: 35px;
             }
             @include media(tablet) {
@@ -85,7 +85,7 @@ body {
             border-radius: 50px;
             left: 7px;
             top: 72px;
-            @include media(371px) {
+            @include media(355px) {
               top: 42px;
             }
             @include media(tablet) {
